--- a/src/CSS/app.scss
+++ b/src/CSS/app.scss
@@ -2,7 +2,49 @@ h3 {
   color: blue;
 }
 
-.game-cell{
-font-size: 3rem;
+.game-field {
+  position: relative;
+}
+.game-cell {
+  font-size: 3rem;
   height: 100px;
 }
+.winner-title {
+  color: darkgreen;
+}
+.tie-title {
+  color: orange;
+}
+@keyframes game-title {
+  0% {
+    color: darkblue;
+  }
+  25% {
+    color: blue;
+  }
+  50% {
+    color: rgb(130, 99, 156) ; 
+  }
+  100% {
+    color: rgb(187, 152, 243);
+  }
+}
+.game-title {
+  color: darkblue;
+  font-weight: bold;
+  animation: game-title 3s linear 0s infinite alternate;
+  -webkit-animation: game-title 3s linear 0s infinite alternate;
+}
+// .finLine::after{
+//   content: "";
+//   position: absolute;
+//   left: 0;
+//   top:0;
+//   height: 100%;
+//   border: 5px solid blue;
+//   border-radius: 10px;
+//   -webkit-border-radius: 10px;
+//   -moz-border-radius: 10px;
+//   -ms-border-radius: 10px;
+//   -o-border-radius: 10px;
+// }
