fix: implement correct cell hover behavior

--- a/src/CSS/app.scss
+++ b/src/CSS/app.scss
@@ -10,7 +10,7 @@ h3 {
   height: 80px;
   background-color: rgb(231, 234, 252);
 }
-.game-cell:hover{
+.notWin:hover{
   background-color:rgb(209, 216, 223);
 }
 .win-field-cell{
