--- a/src/CSS/app.css
+++ b/src/CSS/app.css
@@ -16,10 +16,6 @@ h3 {
   background-color: #d1d8df;
 }
 
-.win-field-cell {
-  background-color: #a1f0cb;
-}
-
 .winner-title {
   color: red;
 }
@@ -63,5 +59,38 @@ h3 {
   font-weight: bold;
   animation: game-title 3s linear 0s infinite alternate;
   -webkit-animation: game-title 3s linear 0s infinite alternate;
+}
+
+@-webkit-keyframes win-cells-animation {
+  0% {
+    background-color: #fff;
+  }
+  100% {
+    background-color: #a1f0cb;
+  }
+}
+
+@keyframes win-cells-animation {
+  0% {
+    background-color: #fff;
+  }
+  100% {
+    background-color: #a1f0cb;
+  }
+}
+
+.win-field-cell {
+  background-color: #fff;
+  -webkit-animation-name: win-cells-animation;
+          animation-name: win-cells-animation;
+  -webkit-animation-duration: 0.07s;
+          animation-duration: 0.07s;
+  -webkit-animation-iteration-count: 8;
+          animation-iteration-count: 8;
+  animation-direction: alternate-reverse;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
 }
 /*# sourceMappingURL=app.css.map */
